# XEGG_luajava_android

./: .gitignore  build.gradle.kts  settings.gradle.kts
RLGG UI实例/PROJECTS/IOS26组件/: 111.lua  111.lua.bak  ios26bottomNavigationLayout.lua  ios26bottomNavigationLayout.lua.bak  底部导航-页面布局 - 简单应用示例.lua  底部导航-页面布局.lua
RLGG UI实例/PROJECTS/NeuralByte/: 111.lua  111.lua.bak  shark.lua  shark.lua.bak  untitled.lua  模糊AKEBI.lua  模糊AKEBI.lua.bak  水影ui.lua  水影ui.lua.bak  水影ui2.lua  水影ui2.lua.bak
RLGG UI实例/PROJECTS/天体矩阵UI/: 天体矩阵.lua  天体矩阵.lua.bak
RLGG UI实例/PROJECTS/曾经的直装系列/: Akebi直装深绿Imgui.lua  Akebi黑直装.lua  Akebi黑直装.lua.bak  OrinCheat Pro.lua.bak  Windows10小窗.lua
RLGG UI实例/PROJECTS/纯自制工具箱/: 纯自制工具箱.lua  纯自制工具箱.lua.bak  草泥马  草泥马.bak
RLGG UI实例/UI工具箱/: BottomNavigation工具箱[xxs看了流泪版].lua.bak  UI工具箱.error_report.txt  新云烛UI工具箱第一代.formatted.lua  新云烛UI工具箱第一代.lua  新云烛UI工具箱第一代.lua.bak  新云烛UI工具箱第一代.lua.error_report.txt  新云烛UI工具箱第一代.lua.formatted.lua
RLGG UI实例/其他/先进项目/: Material-UI文档(1).lua  毛玻璃.lua  毛玻璃.lua.bak  浪子UI编辑器(1).lua  静态模糊 没啥用.lua.bak  静态模糊.lua
RLGG UI实例/其他/加密/: deepseek企业版1.0.lua  deepseek企业版1.0.lua.bak
app/: build.gradle.kts  proguard-rules.pro
core/: Cargo.toml
core/src/: lib.rs
core/src/dump/: mod.rs
core/src/jni/: bridge.rs
core/src/memory/: fdaccess.rs  mod.rs  ptrace.rs  region.rs  traits.rs  virtualspace.rs
core/src/modify/: mod.rs
core/src/pointer/: mod.rs
core/src/script/: api.rs  engine.rs  luajava.rs  mod.rs
core/src/search/: mod.rs
core/src/speed/: mod.rs
docs/specs/: 2025-06-13-overlay-md3-redesign.md
scripts/: build-android.sh
(+2194 files in other folders)
