[package]
name = "xegg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", default-features = false }
nix = { version = "0.29", features = ["process", "ptrace", "signal"] }
thiserror = "2"
log = "0.4"

[dependencies.mlua]
version = "0.10"
features = ["lua53", "vendored"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
